# rusted-sntp

./: README.md
sntprs/: Cargo.toml
sntprs/src/: lib.rs  ntppacket.rs  ntpresult.rs
