[package]
name = "sntprs"
version = "0.1.0"
authors = ["Daniele Olmisani <mad4j@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
chrono = "0.4"
simple_logger = "1.4"
clap = "2.33"
arrayref = "0.3.6"
